change cdn url to use https

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<title>IKA</title>
 		<style>canvas { width: 100%; height: 100% }</style>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
 		<script src="js/three-ext.js"></script>
         <script src="js/ika.js"></script>
 		<script>
